# signalgraph

./: .gitignore  FILE-LIST.txt  README.md  START-HERE.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-bootstrap-and-runtime-contracts/: 01-01-PLAN.md  CONTEXT.md  RESEARCH.md
.planning/phases/02-vertical-slice-camera-mediapipe-osc/: 02-01-PLAN.md  02-UI-SPEC.md  CONTEXT.md  RESEARCH.md
docs/: DEMO.md  PACKAGING.md  SETUP.md  TROUBLESHOOTING.md
fixtures/: gesture_transitions.jsonl  hand_left_sweep.jsonl
scripts/: build-worker.ps1  build-worker.sh
shared/schemas/: graph_document.schema.json  telemetry_frame.schema.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  commands.rs  contracts.rs  fake.rs  lib.rs  main.rs  osc.rs  signals.rs  worker.rs
src-tauri/src/runtime/: compile.rs  mod.rs  nodes.rs  patches.rs  replay.rs  starter.rs  validate.rs
src-tauri/tests/: integration.rs
src/components/: CameraPreview.tsx  HardcodedMappingPanel.tsx  OscLoopbackPanel.tsx  SourceExplorer.tsx  StatusPanel.tsx  TrackerControls.tsx
src/editor/: CalibrationPanel.tsx  CustomNode.tsx  NodeInspector.tsx  NodePalette.tsx  PatchEditor.tsx  editorStore.ts  nodeSpecs.ts  starterPatch.ts  templates.ts  types.ts
src/lib/: store.ts  tauri.ts  types.ts
src/views/: PacketMonitor.tsx  PatchEditor.tsx  TrackingLab.tsx
worker/: README.md  main.py
(+14 files in other folders)
